<resources>
    <string name="app_name">Step Challenge</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="daily_goal_question">What is your daily goal?</string>
    <string name="step_length_question">What is your average step length?</string>
    <string name="set_preferences_button">Set Preferences</string>
    <string name="steps_done_text">Steps Today:</string>
    <string name="daily_goal_text">Daily Goal:</string>
    <string name="distance_run_text">Distance run:</string>
    <string name="reset_counter_button">Reset</string>
    <string name="title_activity_help">Help</string>
    <string name="help_info">Step Challenge is an app to count your steps. Therefore it works like a pedometer. Type in your goal and your step length in the settings option and return to the main menu. You can now walk and see your steps being counted. When you reach your goal you will get an notification to have some proof of your achievement.</string>
</resources>
