<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sven.stepchallenge.Settings"
    android:background="@drawable/background_foot">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/daily_goal_question"
            android:id="@+id/dailyGoalQuestion"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/dailyGoalField"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/step_length_question"
            android:id="@+id/stepLengthQuestion"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/stepLengthField"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_preferences_button"
            android:id="@+id/setPreferences"
            android:layout_row="6"
            android:layout_gravity="center_horizontal"
            android:onClick="setPreferences" />

    </GridLayout>
</RelativeLayout>
