<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_foot">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/steps_done_text"
            android:id="@+id/stepsToday"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/stepsTodayValue"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/daily_goal_text"
            android:id="@+id/dailyGoal"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0 of 10"
            android:id="@+id/dailyGoalValue"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/distance_run_text"
            android:id="@+id/distanceRun"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/distanceRunValue"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_counter_button"
            android:id="@+id/resetButton"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="3"
            android:layout_rowSpan="2"
            android:onClick="resetSteps" />

    </GridLayout>
</RelativeLayout>
